--- a/src/content/tutorials/introduction/starter.mdx
+++ b/src/content/tutorials/introduction/starter.mdx
@@ -2,7 +2,7 @@
 title: pyHarvest | Starter Guide
 ---
 
-import { Admonition } from '../../components/customComponents.js';
+import { Admonition } from '@components/customComponents.js';
 
 # Starter Guide
 
